components/gatekeeper-system/namespace-gatekeeper-system.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gatekeeper-system
  annotations:
    argocd.argoproj.io/sync-options: Delete=false
    argocd.argoproj.io/sync-wave: '-10'
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
